--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["html_to_image", "html_to_image_cli"]
+members = ["html_to_image", "html_to_image_cli", "html_to_image_server"]
 resolver = "2"
 
 [workspace.package]
@@ -27,6 +27,7 @@ blitz = "0.2.1"
 clap = { version = "4.5.53", default-features = false, features = [
     "std",
     "derive",
+    "env",
 ] }
 image = { version = "=0.25.6", default-features = false, features = [
     "png",
@@ -40,8 +41,19 @@ rand = { version = "0.9.2", default-features = false, features = [
 ] }
 linebender_resource_handle = "0.1.1"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
 tempfile = "3.13.0"
 thiserror = "2.0.17"
+tokio = { version = "1.48.0", features = [
+    "macros",
+    "rt-multi-thread",
+    "signal",
+] }
+poem = "3.1.12"
+poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
+tracing = "0.1.43"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+dotenvy = "0.15.7"
 
 [workspace.lints.rust]
 # more lints can be found in [workspace.lints.clippy]
@@ -56,7 +68,7 @@ missing_docs = "allow"
 dead_code = "warn"
 
 # disable in your project if these report false positives for build-dependencies
-unused_crate_dependencies = "warn"
+unused_crate_dependencies = "allow"
 
 ######################################################################################################################
 # Maintenance lints that are generally overridden, but can be used temporarily for clean-up and maintenance
