--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,10 @@
 [workspace]
-members = ["html_to_image", "html_to_image_cli", "html_to_image_server"]
+members = [
+    "html_to_image",
+    "html_to_image_cli",
+    "html_to_image_server",
+    "html_to_image_node",
+]
 resolver = "2"
 
 [workspace.package]
@@ -41,8 +46,8 @@ rand = { version = "0.9.2", default-features = false, features = [
 ] }
 linebender_resource_handle = "0.1.1"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
-tempfile = "3.13.0"
+serde_json = "1.0.148"
+tempfile = "3.24.0"
 thiserror = "2.0.17"
 tokio = { version = "1.48.0", features = [
     "macros",
@@ -51,7 +56,7 @@ tokio = { version = "1.48.0", features = [
 ] }
 poem = "3.1.12"
 poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
-tracing = "0.1.43"
+tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 dotenvy = "0.15.7"
 
